src/objects/Song__c.object
<CustomObject>
    <fields>
        <fullName>Album__c</fullName>
        <label>Album</label>
        <referenceTo>Album__c</referenceTo>
        <relationshipLabel>Songs</relationshipLabel>
        <relationshipName>Songs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Duration_Seconds__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Duration Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <defaultValue>&quot;00:00&quot;</defaultValue>
        <label>Duration</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spotify_URI__c</fullName>
        <label>Spotify URI</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Track_Number__c</fullName>
        <label>Track Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Song</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Songs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Duaration_Format</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX( Duration__c ,  &quot;^\\d{1,3}:\\d{2}$&quot;) )</errorConditionFormula>
        <errorDisplayField>Duration__c</errorDisplayField>
        <errorMessage>Not a valid duration format. Must be in format MM:SS</errorMessage>
    </validationRules>
</CustomObject>